// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: closed 1`] = `
<BoxedGroupAccordion
  className="big-spacer-bottom"
  onClick={[Function]}
  open={false}
  title={
    <h3
      title="Azure Project"
    >
      azure-project-1
    </h3>
  }
/>
`;

exports[`should render correctly: importing 1`] = `
<BoxedGroupAccordion
  className="big-spacer-bottom open"
  onClick={[Function]}
  open={true}
  title={
    <h3
      title="Azure Project"
    >
      azure-project-1
    </h3>
  }
>
  <DeferredSpinner
    loading={false}
  >
    <div
      className="display-flex-wrap"
    >
      <div
        className="create-project-azdo-repo display-flex-start spacer-bottom padded-right"
        key="Azure repo 1"
      >
        <Radio
          checked={false}
          className="overflow-hidden"
          disabled={true}
          onCheck={[Function]}
          value="Azure repo 1"
        >
          <span
            className="text-ellipsis"
            title="Azure repo 1"
          >
            Azure repo 1
          </span>
        </Radio>
      </div>
    </div>
    <ListFooter
      count={1}
      loadMore={[Function]}
      total={1}
    />
  </DeferredSpinner>
</BoxedGroupAccordion>
`;

exports[`should render correctly: loading 1`] = `
<BoxedGroupAccordion
  className="big-spacer-bottom open"
  onClick={[Function]}
  open={true}
  title={
    <h3
      title="Azure Project"
    >
      azure-project-1
    </h3>
  }
>
  <DeferredSpinner
    loading={true}
  >
    <div
      className="display-flex-wrap"
    />
    <ListFooter
      count={0}
      loadMore={[Function]}
      total={0}
    />
  </DeferredSpinner>
</BoxedGroupAccordion>
`;

exports[`should render correctly: search results 1`] = `
<BoxedGroupAccordion
  className="big-spacer-bottom open"
  onClick={[Function]}
  open={true}
  title={
    <h3
      title="Azure Project"
    >
      azure-project-1
    </h3>
  }
>
  <DeferredSpinner
    loading={false}
  >
    <div
      className="display-flex-wrap"
    >
      <div
        className="create-project-azdo-repo display-flex-start spacer-bottom padded-right"
        key="this repo is the best"
      >
        <Radio
          checked={false}
          className="overflow-hidden"
          disabled={false}
          onCheck={[Function]}
          value="this repo is the best"
        >
          <span
            className="text-ellipsis"
            title="this repo is the best"
          >
            this 
            <strong
              className=""
            >
              repo
            </strong>
             is the best
          </span>
        </Radio>
      </div>
      <div
        className="create-project-azdo-repo display-flex-start spacer-bottom padded-right"
        key="This is a repo with class"
      >
        <CheckIcon
          className="spacer-right"
          fill="#00aa00"
          size={14}
        />
        <div
          className="overflow-hidden"
        >
          <div
            className="little-spacer-bottom text-ellipsis"
          >
            <Link
              title="SQ Name"
              to={
                Object {
                  "pathname": "/dashboard",
                  "search": "?id=sq-key",
                }
              }
            >
              SQ Name
            </Link>
          </div>
          <em>
            onboarding.create_project.repository_imported
          </em>
        </div>
      </div>
    </div>
    <ListFooter
      count={2}
      loadMore={[Function]}
      total={2}
    />
  </DeferredSpinner>
</BoxedGroupAccordion>
`;

exports[`should render correctly: with repositories 1`] = `
<BoxedGroupAccordion
  className="big-spacer-bottom open"
  onClick={[Function]}
  open={true}
  title={
    <h3
      title="Azure Project"
    >
      azure-project-1
    </h3>
  }
>
  <DeferredSpinner
    loading={false}
  >
    <div
      className="display-flex-wrap"
    >
      <div
        className="create-project-azdo-repo display-flex-start spacer-bottom padded-right"
        key="Azure repo 1"
      >
        <Radio
          checked={false}
          className="overflow-hidden"
          disabled={false}
          onCheck={[Function]}
          value="Azure repo 1"
        >
          <span
            className="text-ellipsis"
            title="Azure repo 1"
          >
            Azure repo 1
          </span>
        </Radio>
      </div>
      <div
        className="create-project-azdo-repo display-flex-start spacer-bottom padded-right"
        key="Azure repo 1"
      >
        <CheckIcon
          className="spacer-right"
          fill="#00aa00"
          size={14}
        />
        <div
          className="overflow-hidden"
        >
          <div
            className="little-spacer-bottom text-ellipsis"
          >
            <Link
              title="SQ Name"
              to={
                Object {
                  "pathname": "/dashboard",
                  "search": "?id=sq-key",
                }
              }
            >
              SQ Name
            </Link>
          </div>
          <em>
            onboarding.create_project.repository_imported
          </em>
        </div>
      </div>
    </div>
    <ListFooter
      count={2}
      loadMore={[Function]}
      total={2}
    />
  </DeferredSpinner>
</BoxedGroupAccordion>
`;
